# ccwc

./: README.md  pyproject.toml  setup.py  wc.py
ccwc/: ccwc.py  cli.py
src/ccwc/: __init__.py  ccwc.py  cli.py
tests/: test_ccwc.py  test_cli.py
wcc-tool/: wc
